fixed issue where carousel dots were appearing too high on the page

--- a/src/components/Stats/Stats.scss
+++ b/src/components/Stats/Stats.scss
@@ -11,18 +11,35 @@
   flex-flow: row nowrap;
   justify-content: center;
   align-items: center;
-  height: 13vh;
+  height: 10vh;
 }
 
 .stat h2 {
   color: white;
 }
 
+.slick-list {
+  height: 10vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
 // ant design carousel override
 
 .ant-carousel .slick-dots {
-  margin-bottom: 35px;
-  @media (min-width: 1080px) {
-    margin-bottom: 55px;
+  // padding-bottom: 0;
+  margin: 0px;
+  @media (min-height: 900px) {
+    padding-bottom: 2px;
+  }
+  @media (min-height: 1000px) {
+    padding-bottom: 8px;
+  }
+  @media (min-height: 1200px) {
+    padding-bottom: 12px;
+  }
+  @media (min-height: 1300px) {
+    padding-bottom: 13px;
   }
 }
